# blend2d-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: test-pr.yml
blend2d/: __init__.py
blend2d/tests/: test_basic.py
ci/: edm_driver.py  install-edm-linux.sh  install-environment.sh  run-tests.sh
examples/: gradient.py  image.py  lines.py  pattern.py  spiral.py  text.py
src/: CMakeLists.txt  _capi.pxd  _capi.pyx  array.pxi  capi.pyx  context.pxi  enums.pxi  font.pxi  geometry.pxi  gradient.pxi  image.pxi  misc.pxi  path.pxi  pattern.pxi  pixel_convert.pxi
